[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cenn-forecasting"
version = "0.2.0"
description = "Cellular Neural Network (CeNN) for multivariate time-series forecasting"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Mohamed Elbahnasawi"},
]
keywords = ["time-series", "forecasting", "cellular-neural-network", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/mohamedelbahnasawi/ams-cenn"

[tool.setuptools.packages.find]
include = ["cenn_forecasting*"]
